# leptos-content-collection

./: AGENTS.md  Cargo.toml  LICENSE.md  README.md  index.html
.github/workflows/: release.yml
examples/actix/: Cargo.toml
examples/actix-tera/: Cargo.toml  build.rs
examples/actix-tera/content/posts/: draft-wip.md  hello-tera.md  rust-web-stack.md
examples/actix-tera/src/: main.rs
examples/actix-tera/templates/: 404.html  base.html  index.html  post.html
examples/actix/content/posts/: hello-actix.md
examples/actix/src/: main.rs
examples/axum/: Cargo.toml
examples/axum/content/posts/: hello-axum.md  rust-web-dev.md
examples/axum/src/: main.rs
examples/dioxus/: Cargo.toml
examples/dioxus/assets/: main.css
examples/dioxus/content/posts/: hola-dioxus.md
examples/dioxus/src/: main.rs
examples/freya/: Cargo.toml  build.rs
examples/freya/content/posts/: hola-freya.md
examples/freya/src/: main.rs
examples/leptos/: Cargo.toml
examples/leptos/content/posts/: hola-leptos.md
examples/leptos/src/: app.rs  main.rs
examples/leptos/style/: main.scss
examples/yew/: Cargo.toml  index.scss
examples/yew/content/posts/: hola-yew.md
examples/yew/src/: app.rs
src/: codegen.rs  collection.rs  embedded.rs  entry.rs  error.rs  lib.rs  parser.rs
webpage/: app.css  app.js
