[package]
name = "leptos-content-collection"
version = "1.0.0"
edition = "2024"
description = "Astro-style content collections"
authors = ["Wilovy09"]
license = "MIT"
categories = ["development-tools", "parser-implementations", "web-programming"]
repository = "https://github.com/Wilovy09/leptos-content-collection"
homepage = "https://wilovy09.github.io/leptos-content-collection"

[features]
default = ["buildtime"]
buildtime = []
ssr = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
pulldown-cmark = "0.12"
thiserror = "2"
