[package]
name = "actix-tera-example"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tera = "1"
leptos-content-collection = { path = "../.." }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
leptos-content-collection = { path = "../.." }
