[package]
name = "dioxus-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
leptos-content-collection = "1.1.0"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
leptos-content-collection = "1.1.0"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
