[package]
name = "yew"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos-content-collection = "1.1.0"
serde = { version = "1", features = ["derive"] }
yew = { version = "0.23", features = ["csr"] }

[build-dependencies]
leptos-content-collection = "1.1.0"
